    ewl_set_theme()
    ewl_get_theme()
    ewl_insert_path()
    ewl_remove_path()
    ewl_get_path_list()
    ewl_get_path_strings()
    ewl_render_antialiased_set()
    ewl_render_dithered_set()
    ewl_render_antialiased_get()
    ewl_render_dithered_get()
    ewlg_set_display()
    ewlg_get_display()


-----
20000819-0241-PDT, pabs

- updated entire tree to reflect cleaner state api.

-----
20000819-1045-PDT, pabs

- ewl_widget_set_rect() now emits a EWL_EVENT_MOVE on the widget if
the x or y is adjusted.
- aded ewl_event_new_by_type_with_widget().  To emit an simple event
(eg one that doesn't have any additional parameters that need to be
set), you can just do the following:
    ev = ewl_event_new_by_type_with_widget(EWL_EVENT_HAXOR, widget);
    ewl_event_queue(ev);



-----
20000819-1049-PDT, pabs

- added EWL_EVENT_MOVE hook to EWlWindows -- you _should_ be able
to move them around now with override-redirect on, but I ahven't
checked yet.
- didn't work.. dont' know why yet.
- whoops!  forgot to actually connect EwlWindows to the event
handler. hehe. :)
- okay it works in my sample mouseup handler, ubt not before the
window is mapped. hmm.
- okay works now, but it's not being exposed if it's clipped on
the screen boundaries. hmm

-----
20000819-1518-PDT, pabs

- expose events only need to refresh the region in question, not the
entire window.  this is a noticable speed improvement.
- chnaged the default antialiasing to off.. hope that'sokay

-----
20000819-1539-PDT, pabs

- added x5rings to AUTHORS file.

-----
20000821-1241-PDT, pabs

- fix for the following bug:
<RbdPngn> pabswork: ewlwindow.c lines 263 and 269. assigning constant strings
          that may get freed later.
...
thanks dude. :)

-----
20000821-1323-PDT, pabs

- fixed the VBOX segv (gotta be more careful with those wacky 
comparisons).

-----
20000821-1722-PDT, pabs

- added ewl_widget_imlayer_show/hide/get_by_name()

-----
20000822-1623-PDT, pabs

- misc cleanups.
